src/test/compile-fail/swap-uninit.rs
// error-pattern:Unsatisfied precondition

fn main() {
    auto x = 3;
    auto y;
    x <-> y;
}
